# BeatEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
BeatEngine/include/: Logger.h
BeatEngine/include/Base/: Event.h
BeatEngine/include/Base/Events/: ViewEvent.h
BeatEngine/include/Manager/: ViewManager.h
BeatEngine/src/: Logger.cpp
BeatEngine/src/Base/: View.cpp
BeatEngine/src/Manager/: EventManager.cpp
BeatEngine/src/Util/: Commands.cpp
include/: CMakeLists.txt
include/Base/: View.h
include/BeatEngine/: Game.h  Game.inl  GameContext.h  GameState.h  Logger.h  Logger.inl  Managers.h
include/BeatEngine/Asset/: AudioStream.h  Font.h  Shader.h  ShaderData.h  Sound.h  Texture.h
include/BeatEngine/Base/: Asset.h  Entity.h  Event.h  Settings.h  Signal.h  SignalResponse.h  System.h  View.h
include/BeatEngine/Base/Events/: ViewEvent.h
include/BeatEngine/Camera/: Camera.h  CameraMode.h  ShakeParams.h
include/BeatEngine/Enum/: Alignment.h  AssetType.h  Commands.h  EnvFlags.h  GameFlags.h  LogType.h  ViewFlags.h
include/BeatEngine/Events/: AudioEvent.h  GameEvent.h  ViewEvent.h  WindowEvents.h
include/BeatEngine/Graphics/: BaseWindow.h  Renderer.h  VSyncMode.h  Vector2.h  Vector2.inl  Vector3.h
include/BeatEngine/Manager/: AssetManager.h  AssetManager.inl  AudioManager.h  EventManager.h  EventManager.inl  GraphicsManager.h  GraphicsManager.inl  SettingsManager.h  SettingsManager.inl  SignalManager.h  SignalManager.inl  SystemManager.h  SystemManager.inl  UIManager.h  UIManager.inl  ViewManager.h  ViewManager.inl
include/BeatEngine/Renderers/: Vulkan.h  VulkanBoilerplate.h  VulkanFrameData.h  VulkanWindow.h
include/BeatEngine/Renderers/OpenGL/: Renderer.h
include/BeatEngine/Renderers/Vulkan/: AllocatedImage.h  Boilerplate.h  DescriptorAllocator.h  DescriptorBuilder.h  FrameData.h  PipelineManager.h  Renderer.h  UninitQueue.h
include/BeatEngine/Renderers/Vulkan/Assets/: Shader.h
include/BeatEngine/Settings/: GameDebugSettings.h  GameSettings.h
include/BeatEngine/Signals/: AudioSignals.h  GameSignals.h  SettingsSignals.h  ViewSignals.h
include/BeatEngine/System/: Clock.h  Time.h  Time.inl
include/BeatEngine/UI/: Alignment.h  UIClickeable.h  UIElement.h  UILayer.h  UILayer.inl
include/BeatEngine/UI/Elements/: Button.h  ProgressBar.h  UIPanel.h
include/BeatEngine/Util/: ChronoHelper.h  Exception.h  Helper.h  UID.h  UIHelper.h
include/BeatEngine/View/: ViewLayer.h  ViewLayerStack.h  ViewLayerStack.inl
include/BeatEngine/Windows/SDL/: Window.h
include/Enum/: LogType.h
src/: CMakeLists.txt  Game.cpp  GameState.cpp  Logger.cpp
src/Asset/: AudioStream.cpp  Font.cpp  Shader.cpp  Sound.cpp  Texture.cpp
src/Base/: View.cpp
src/Enum/: AssetType.cpp  LogType.cpp
src/Graphics/: BaseWindow.cpp  Renderer.cpp
src/Manager/: AssetManager.cpp  AudioManager.cpp  EventManager.cpp  GraphicsManager.cpp  SettingsManager.cpp  SignalManager.cpp  SystemManager.cpp  UIManager.cpp  ViewManager.cpp
src/Renderers/: Vulkan.cpp  VulkanBoilerplate.cpp  VulkanWindow.cpp
src/Renderers/OpenGL/: Renderer.cpp
src/Renderers/Vulkan/: Boilerplate.cpp  DescriptorAllocator.cpp  DescriptorBuilder.cpp  PipelineManager.cpp  Renderer.cpp  UninitQueue.cpp
src/Renderers/Vulkan/Assets/: Shader.cpp
src/Settings/: GameDebugSettings.cpp  GameSettings.cpp
src/System/: Clock.cpp  Time.cpp
src/UI/: UIClickeable.cpp  UIElement.cpp  UILayer.cpp
src/UI/Elements/: Button.cpp  ProgressBar.cpp  UIPanel.cpp
src/Util/: ChronoHelper.cpp  Commands.cpp  Exception.cpp  Helper.cpp  LogType.cpp  UID.cpp  UIHelper.cpp
src/View/: ViewLayer.cpp  ViewLayerStack.cpp
src/Windows/SDL/: Window.cpp
test/: CMakeLists.txt  main.cpp
test/layer/: GameLayer.cpp  GameLayer.h  globalLayer.cpp  globalLayer.h
test/system/: system.cpp  system.h
test/view/: gameView.cpp  gameView.h  view.cpp  view.h
